kubernetes/apps/qui/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qui
  labels:
    app: qui
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: qui
  template:
    metadata:
      labels:
        app: qui
    spec:
      securityContext:
        sysctls:
          # - name: net.ipv4.conf.all.src_valid_mark
          #   value: "1"
          - name: net.ipv6.conf.all.disable_ipv6
            value: "1"
      enableServiceLinks: true
      containers:
      - name: qui
        image: ghcr.io/hotio/qui:latest
        securityContext:
          privileged: false
          capabilities:
            add: ["NET_ADMIN"]
        ports:
        - containerPort: 7476
          name: http
        volumeMounts:
        - name: qui-data
          mountPath: /config
        - name: qui-downloads
          mountPath: /downloads
      volumes:
      - name: qui-data
        persistentVolumeClaim:
          claimName: qui-data
      - name: qui-downloads
        persistentVolumeClaim:
          claimName: qui-downloads
      - name: qui-wg0
        secret:
          secretName: qui
          items:
            - key: wg0.conf
              path: wg0.conf
