kubernetes/apps/qui/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: qui
spec:
  selector:
    app: qui
  ports:
  - name: http
    port: 7476
    targetPort: 7476
    protocol: TCP
